Bug 364143 - kde-windows installer not ran as admin by default
Summary: kde-windows installer not ran as admin by default
Status: RESOLVED FIXED
Alias: None
Product: kde-windows
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KDE-Windows
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-09 11:56 UTC by Stefan Monov
Modified: 2017-03-24 09:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Monov 2016-06-09 11:56:14 UTC
KDE version: 4.10.2

By default the installer is not ran with Administrator privileges, so it fails when it gets to putting files in C:\Program Files.
This applies both when initially running the installer after downloading it, and when running the already-installed copy of the installer.

Reproducible: Always
Comment 1 Ralf Habacker 2017-03-24 09:36:10 UTC
Git commit ae0db62fa31a0b9656f0999ccacfcdff4f4055ec by Ralf Habacker.
Committed on 24/03/2017 at 09:27.
Pushed by habacker into branch 'master'.

Fix 'kde-windows installer not ran as admin by default'.

The installer is now checking if directories and files could be
created in the related directory.

M  +4    -5    gui/installdirectorypage.cpp
M  +49   -0    shared/misc.cpp
M  +3    -0    shared/misc.h