Fix 'kde-windows installer not ran as admin by default'.

The installer is now checking if directories and files could be
created in the related directory.

BUG:364143
FIXED-IN:1.1.0